--- a/src/sample/GUI/GUI_ForgotPassword.fxml
+++ b/src/sample/GUI/GUI_ForgotPassword.fxml
@@ -21,7 +21,7 @@
             <Font name="Agency FB" size="22.0" />
          </font>
       </Text>
-      <Button layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#loginVerification" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SEND " textFill="WHITE" />
+      <Button layoutX="131.0" layoutY="377.0" mnemonicParsing="false" onAction="#sendEmail" prefHeight="47.0" prefWidth="117.0" style="-fx-background-color: #33adff;" text="SEND " textFill="WHITE" />
       <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
       <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
       <Separator layoutX="91.0" layoutY="181.0" prefWidth="200.0" />
