--- a/src/sample/GUI/GUI_AccountSettings.fxml
+++ b/src/sample/GUI/GUI_AccountSettings.fxml
@@ -23,10 +23,15 @@
             </font>
         </Text>
         <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
-        <TextField alignment="CENTER" layoutX="118.0" layoutY="219.0" onAction="#changeUsernameField" promptText="USERNAME" />
-        <TextField alignment="CENTER" layoutX="118.0" layoutY="274.0" onAction="#changePasswordField" promptText="PASSWORD" />
+        <TextField alignment="CENTER" layoutX="118.0" layoutY="245.0" onAction="#changeUsernameField" promptText="USERNAME" />
+        <TextField alignment="CENTER" layoutX="118.0" layoutY="289.0" onAction="#changePasswordField" promptText="PASSWORD" />
         <TextField alignment="CENTER" layoutX="118.0" layoutY="332.0" onAction="#confirmPasswordField" promptText="CONFIRM PASSWORD" />
         <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
-        <Button layoutX="316.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+        <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
+      <Text fill="#00000099" layoutX="155.0" layoutY="226.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CHANGE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
     </children>
 </AnchorPane>
