--- a/src/sample/GUI/GUI_ChangePrice.fxml
+++ b/src/sample/GUI/GUI_ChangePrice.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -25,8 +24,8 @@
       <Separator layoutX="91.0" layoutY="194.0" prefWidth="200.0" />
       <Button layoutY="424.0" mnemonicParsing="false" onAction="#handleHelp" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="HELP" textFill="WHITE" />
       <Button layoutX="312.0" layoutY="424.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="40.0" prefWidth="68.0" style="-fx-background-color: dee0e2;" text="CANCEL" textFill="WHITE" />
-      <TextField fx:id="changePriceField" alignment="CENTER" layoutX="100.0" layoutY="321.0" prefHeight="29.0" prefWidth="184.0" promptText="CHANGE PRICE" />
-      <Button layoutX="139.0" layoutY="384.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: #33adff;" text="SAVE" textFill="WHITE" />
-      <ComboBox layoutX="100.0" layoutY="248.0" onAction="#searchForSongs" prefHeight="29.0" prefWidth="184.0" style="-fx-text-fill: #FFFFFF; -fx-background-color: #d5f1ff;" styleClass="-fx-text-fill" />
+      <TextField fx:id="changePriceField" alignment="CENTER" layoutX="100.0" layoutY="309.0" prefHeight="29.0" prefWidth="184.0" promptText="CHANGE PRICE" />
+      <Button layoutX="139.0" layoutY="371.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="40.0" prefWidth="106.0" style="-fx-background-color: #33adff;" text="SAVE" textFill="WHITE" />
+      <TextField fx:id="searchField" alignment="CENTER" layoutX="100.0" layoutY="232.0" onAction="#searchForSongs" prefHeight="29.0" prefWidth="184.0" promptText="SEARCH" />
    </children>
 </AnchorPane>
