--- a/src/sample/GUI/GUI_Verification.fxml
+++ b/src/sample/GUI/GUI_Verification.fxml
@@ -10,13 +10,13 @@
 
 <AnchorPane fx:id="rootPane" prefHeight="450.0" prefWidth="380.0" style="-fx-background-color: #7A7A7A;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controllers.Controller_Verification">
    <children>
-      <Button layoutX="114.0" layoutY="352.0" mnemonicParsing="false" onAction="#paneToLibrary" prefHeight="55.0" prefWidth="156.0" style="-fx-background-color: #33adff;" text="LIBRARY" textFill="WHITE" />
+      <Button layoutX="114.0" layoutY="352.0" mnemonicParsing="false" onAction="#paneToLibrary" prefHeight="55.0" prefWidth="156.0" style="-fx-background-color: #8cd1ff;" text="LIBRARY" textFill="WHITE" />
       <Text fill="WHITE" layoutX="26.0" layoutY="247.0" strokeType="OUTSIDE" strokeWidth="0.0" text="THANK YOU FOR YOUR PURSHASE!">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="63.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your purchased songs are now in your library">
+      <Text fill="WHITE" layoutX="64.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your purchased songs are now in your library.">
          <font>
             <Font size="13.0" />
          </font>
